Fixed spacing issues in matches page.

--- a/src/App.scss
+++ b/src/App.scss
@@ -24,3 +24,7 @@
   font-weight: 100 700;
   src: url('https://fonts.gstatic.com/s/materialsymbolsoutlined/v68/kJEhBvYX7BgnkSrUwT8OhrdQw4oELdPIeeII9v6oFsLjBuVY.woff2') format('woff2');
 }
+
+.padding-top {
+    padding-top: 50px;
+}
